# dfplayer-async

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: Cargo.toml  README.md  build.rs
examples/.cargo/: config.toml
examples/src/: basic.rs  query.rs  sleep.rs
src/: lib.rs
