[package]
name = "dfplayer-async"
version = "0.4.0"
edition = "2024"
description = "A simple embedded-hal-async driver for the DFPlayer mini MP3 module."
keywords = ["no-std", "embedded-hal-async", "mp3", "dfplayer", "driver"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/1-rafael-1/dfplayer-async/"
documentation = "https://docs.rs/dfplayer-async/"
license = "MIT"
readme = "README.md"
authors = [
    "Rafael Koch <rafael.koch@gmx.net>",
    "José Morales <josfemova@gmail.com>",
]

[dependencies]
embedded-io-async = "0.6"
embedded-hal-async = "1.0.0"

defmt = { version = "1.0.1", optional = true }

[features]
defmt = ["dep:defmt"]
